src/.antlr/BdexParser.java
// Generated from c:\Users\guiml\Desktop\bdex-lfa-10\src\Bdex.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BdexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		VARNAME=46, STRING=47, INT=48, DOUBLE=49, WS=50, COMMENT=51, ERROR=52;
	public static final int
		RULE_program = 0, RULE_operation = 1, RULE_tableOperation = 2, RULE_media = 3, 
		RULE_sum = 4, RULE_div = 5, RULE_mull = 6, RULE_add = 7, RULE_delete = 8, 
		RULE_extraction = 9, RULE_createTable = 10, RULE_setValue = 11, RULE_junction = 12, 
		RULE_read = 13, RULE_print = 14, RULE_iteration = 15, RULE_forOperation = 16, 
		RULE_forConditions = 17, RULE_expr = 18, RULE_newVarName = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "operation", "tableOperation", "media", "sum", "div", "mull", 
			"add", "delete", "extraction", "createTable", "setValue", "junction", 
			"read", "print", "iteration", "forOperation", "forConditions", "expr", 
			"newVarName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'mediaColl('", "')'", "'mediaLine('", "'sumColl('", "'sumLine('", 
			"'divColl('", "'divLine('", "'mullColl('", "'mullLine('", "'addLine'", 
			"'('", "','", "'deleteLine('", "'extract('", "'Table'", "'='", "'setValue('", 
			"'junctionTables('", "'readColl('", "'readLine('", "'readStr('", "'printColl('", 
			"'printLine('", "'print('", "'iteration('", "'for'", "'from'", "'to'", 
			"'*'", "'/'", "'+'", "'-'", "'>'", "'>='", "'<='", "'<'", "'!='", "'&&'", 
			"'number'", "'str'", "'array'", "'{'", "'}'", "'var'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "VARNAME", 
			"STRING", "INT", "DOUBLE", "WS", "COMMENT", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bdex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BdexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BdexParser.EOF, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__44) | (1L << VARNAME))) != 0)) {
				{
				{
				setState(40);
				operation();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public TableOperationContext tableOperation() {
			return getRuleContext(TableOperationContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public JunctionContext junction() {
			return getRuleContext(JunctionContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public IterationContext iteration() {
			return getRuleContext(IterationContext.class,0);
		}
		public ForOperationContext forOperation() {
			return getRuleContext(ForOperationContext.class,0);
		}
		public NewVarNameContext newVarName() {
			return getRuleContext(NewVarNameContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operation);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(VARNAME);
				setState(49);
				match(T__0);
				setState(50);
				tableOperation();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				createTable();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				junction();
				}
				break;
			case T__19:
			case T__20:
			case T__21:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				read();
				}
				break;
			case T__22:
			case T__23:
			case T__24:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				print();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				iteration();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 7);
				{
				setState(56);
				forOperation();
				}
				break;
			case T__39:
			case T__40:
			case T__41:
			case T__44:
				enterOuterAlt(_localctx, 8);
				{
				setState(57);
				newVarName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableOperationContext extends ParserRuleContext {
		public DeleteContext delete() {
			return getRuleContext(DeleteContext.class,0);
		}
		public MediaContext media() {
			return getRuleContext(MediaContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public MullContext mull() {
			return getRuleContext(MullContext.class,0);
		}
		public IterationContext iteration() {
			return getRuleContext(IterationContext.class,0);
		}
		public SetValueContext setValue() {
			return getRuleContext(SetValueContext.class,0);
		}
		public ExtractionContext extraction() {
			return getRuleContext(ExtractionContext.class,0);
		}
		public TableOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableOperation; }
	}

	public final TableOperationContext tableOperation() throws RecognitionException {
		TableOperationContext _localctx = new TableOperationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableOperation);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				delete();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				media();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				add();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				sum();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				div();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				mull();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(67);
				iteration();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(68);
				setValue();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(69);
				extraction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MediaContext extends ParserRuleContext {
		public MediaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_media; }
	 
		public MediaContext() { }
		public void copyFrom(MediaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MediaLineContext extends MediaContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MediaLineContext(MediaContext ctx) { copyFrom(ctx); }
	}
	public static class MediaCollContext extends MediaContext {
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public MediaCollContext(MediaContext ctx) { copyFrom(ctx); }
	}

	public final MediaContext media() throws RecognitionException {
		MediaContext _localctx = new MediaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_media);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				_localctx = new MediaCollContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(T__1);
				setState(73);
				match(STRING);
				setState(74);
				match(T__2);
				}
				break;
			case T__3:
				_localctx = new MediaLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(T__3);
				setState(76);
				expr(0);
				setState(77);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SumContext extends ParserRuleContext {
		public SumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sum; }
	 
		public SumContext() { }
		public void copyFrom(SumContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TableOperationSumLineContext extends SumContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TableOperationSumLineContext(SumContext ctx) { copyFrom(ctx); }
	}
	public static class TableOperationSumCollContext extends SumContext {
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public TableOperationSumCollContext(SumContext ctx) { copyFrom(ctx); }
	}

	public final SumContext sum() throws RecognitionException {
		SumContext _localctx = new SumContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sum);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new TableOperationSumCollContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(T__4);
				setState(82);
				match(STRING);
				setState(83);
				match(T__2);
				}
				break;
			case T__5:
				_localctx = new TableOperationSumLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(T__5);
				setState(85);
				expr(0);
				setState(86);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
	 
		public DivContext() { }
		public void copyFrom(DivContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TableOperationDivCollContext extends DivContext {
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public TableOperationDivCollContext(DivContext ctx) { copyFrom(ctx); }
	}
	public static class TableOperationDivLineContext extends DivContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TableOperationDivLineContext(DivContext ctx) { copyFrom(ctx); }
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_div);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				_localctx = new TableOperationDivCollContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(T__6);
				setState(91);
				match(STRING);
				setState(92);
				match(T__2);
				}
				break;
			case T__7:
				_localctx = new TableOperationDivLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(T__7);
				setState(94);
				expr(0);
				setState(95);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MullContext extends ParserRuleContext {
		public MullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mull; }
	 
		public MullContext() { }
		public void copyFrom(MullContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TableOperationMullCollContext extends MullContext {
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public TableOperationMullCollContext(MullContext ctx) { copyFrom(ctx); }
	}
	public static class TableOperationMullLineContext extends MullContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TableOperationMullLineContext(MullContext ctx) { copyFrom(ctx); }
	}

	public final MullContext mull() throws RecognitionException {
		MullContext _localctx = new MullContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mull);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				_localctx = new TableOperationMullCollContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(T__8);
				setState(100);
				match(STRING);
				setState(101);
				match(T__2);
				}
				break;
			case T__9:
				_localctx = new TableOperationMullLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(T__9);
				setState(103);
				expr(0);
				setState(104);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddLineStrContext extends AddContext {
		public List<TerminalNode> STRING() { return getTokens(BdexParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BdexParser.STRING, i);
		}
		public AddLineStrContext(AddContext ctx) { copyFrom(ctx); }
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_add);
		int _la;
		try {
			_localctx = new AddLineStrContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__10);
			setState(109);
			match(T__11);
			setState(110);
			match(STRING);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(111);
				match(T__12);
				setState(112);
				match(STRING);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeleteContext extends ParserRuleContext {
		public DeleteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete; }
	 
		public DeleteContext() { }
		public void copyFrom(DeleteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeleteLineContext extends DeleteContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeleteLineContext(DeleteContext ctx) { copyFrom(ctx); }
	}

	public final DeleteContext delete() throws RecognitionException {
		DeleteContext _localctx = new DeleteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_delete);
		try {
			_localctx = new DeleteLineContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__13);
			setState(121);
			expr(0);
			setState(122);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtractionContext extends ParserRuleContext {
		public ExtractionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extraction; }
	 
		public ExtractionContext() { }
		public void copyFrom(ExtractionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExtractVARNAMEContext extends ExtractionContext {
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public ExtractVARNAMEContext(ExtractionContext ctx) { copyFrom(ctx); }
	}
	public static class ExtractVARNAMEStringContext extends ExtractionContext {
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public ExtractVARNAMEStringContext(ExtractionContext ctx) { copyFrom(ctx); }
	}

	public final ExtractionContext extraction() throws RecognitionException {
		ExtractionContext _localctx = new ExtractionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_extraction);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new ExtractVARNAMEStringContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(T__14);
				setState(125);
				match(VARNAME);
				setState(126);
				match(T__12);
				setState(127);
				match(STRING);
				setState(128);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new ExtractVARNAMEContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(T__14);
				setState(130);
				match(VARNAME);
				setState(131);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableContext extends ParserRuleContext {
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
	 
		public CreateTableContext() { }
		public void copyFrom(CreateTableContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreatTABLEContext extends CreateTableContext {
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public List<TerminalNode> STRING() { return getTokens(BdexParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BdexParser.STRING, i);
		}
		public CreatTABLEContext(CreateTableContext ctx) { copyFrom(ctx); }
	}
	public static class CreatTableJunctionContext extends CreateTableContext {
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public JunctionContext junction() {
			return getRuleContext(JunctionContext.class,0);
		}
		public CreatTableJunctionContext(CreateTableContext ctx) { copyFrom(ctx); }
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_createTable);
		int _la;
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new CreatTABLEContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(T__15);
				setState(135);
				match(VARNAME);
				setState(136);
				match(T__16);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRING) {
					{
					setState(137);
					match(STRING);
					}
				}

				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(140);
					match(T__12);
					setState(141);
					match(STRING);
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new CreatTableJunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				match(T__15);
				setState(148);
				match(VARNAME);
				setState(149);
				match(T__16);
				setState(150);
				junction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetValueContext extends ParserRuleContext {
		public SetValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setValue; }
	 
		public SetValueContext() { }
		public void copyFrom(SetValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetValueTableContext extends SetValueContext {
		public TerminalNode INT() { return getToken(BdexParser.INT, 0); }
		public TerminalNode VARNAME() { return getToken(BdexParser.VARNAME, 0); }
		public List<TerminalNode> STRING() { return getTokens(BdexParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BdexParser.STRING, i);
		}
		public SetValueTableContext(SetValueContext ctx) { copyFrom(ctx); }
	}

	public final SetValueContext setValue() throws RecognitionException {
		SetValueContext _localctx = new SetValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_setValue);
		int _la;
		try {
			_localctx = new SetValueTableContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(T__17);
			setState(154);
			match(INT);
			setState(155);
			match(T__12);
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__12:
				{
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(156);
					match(T__12);
					setState(157);
					match(STRING);
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case VARNAME:
				{
				setState(163);
				match(VARNAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(166);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JunctionContext extends ParserRuleContext {
		public JunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_junction; }
	 
		public JunctionContext() { }
		public void copyFrom(JunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class JuncTableContext extends JunctionContext {
		public List<TerminalNode> VARNAME() { return getTokens(BdexParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(BdexParser.VARNAME, i);
		}
		public JuncTableContext(JunctionContext ctx) { copyFrom(ctx); }
	}

	public final JunctionContext junction() throws RecognitionException {
		JunctionContext _localctx = new JunctionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_junction);
		try {
			_localctx = new JuncTableContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(T__18);
			setState(169);
			match(VARNAME);
			setState(170);
			match(T__12);
			setState(171);
			match(VARNAME);
			setState(172);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
	 
		public ReadContext() { }
		public void copyFrom(ReadContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReadCollContext extends ReadContext {
		public Token CollName;
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public ReadCollContext(ReadContext ctx) { copyFrom(ctx); }
	}
	public static class ReadLineContext extends ReadContext {
		public ExprContext LineIndex;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReadLineContext(ReadContext ctx) { copyFrom(ctx); }
	}
	public static class ReadSTRContext extends ReadContext {
		public Token CollName;
		public ExprContext LineIndex;
		public TerminalNode STRING() { return getToken(BdexParser.STRING, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReadSTRContext(ReadContext ctx) { copyFrom(ctx); }
	}
